--- a/06_Layout/horizontal_list/pubspec.yaml
+++ b/06_Layout/horizontal_list/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lint: ^1.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
