--- a/08_AsyncFuture/catch_error/pubspec.yaml
+++ b/08_AsyncFuture/catch_error/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.5.3
+  lint: ^1.7.2
 
 
 # For information on the generic Dart part of this file, see the
@@ -43,8 +43,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-#  assets:
-#    - assets/
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
